feat: 修改为tsdx开发的组件，发包

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+node_modules
+*/**/node_modules
 /.pnp
 .pnp.js
 
@@ -18,6 +19,8 @@
 .env.test.local
 .env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+*.log
+.cache
+dist
+example/.cache
+example/.parcel-cache
